11-kubernetes-configmaps-secrets-ingress/10-path-ingress/path-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yatri-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yatri-frontend
  template:
    metadata:
      labels:
        app: yatri-frontend
    spec:
      containers:
        - name: frontend
          image: hashicorp/http-echo:1.0
          args: ["-text=YATRI FRONTEND", "-listen=:8080"]
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: yatri-frontend
spec:
  selector:
    app: yatri-frontend
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yatri-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yatri-api
  template:
    metadata:
      labels:
        app: yatri-api
    spec:
      containers:
        - name: api
          image: hashicorp/http-echo:1.0
          args: ["-text=YATRI API BACKEND", "-listen=:8080"]
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: yatri-api
spec:
  selector:
    app: yatri-api
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yatri-path-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: yatri.local
      http:
        paths:
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: yatri-frontend
                port:
                  number: 80
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: yatri-api
                port:
                  number: 80
